--- a/src/bower.json
+++ b/src/bower.json
@@ -13,5 +13,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "angular": "^1.6.3",
+    "angular-ui-router": "^0.4.2"
+  }
 }
